@startuml ZooSimulatorEvents
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam linetype ortho
skinparam dpi 120
top to bottom direction

title Zoo Simulator - Events and Audit Log

class ZooSimulationService {
  +Events : IReadOnlyList<ZooEvent>
  +NextTurn() : void
}

package "Domain.Events" {
  class ZooEvent {
    +TurnNumber : int
    +Year : int
    +Month : int
    +Day : int
    +Type : ZooEventType
    +Description : string
  }

  enum ZooEventType {
    SimulationInitialized
    AnimalPurchased
    HabitatPurchased
    FoodPurchased
    Pregnancy
    EggLaying
    Birth
    InfantDeath
    Disease
    DiseaseDeath
    EndOfLife
    HabitatMonthlyLoss
    OverpopulationDeath
    Fire
    Theft
    Pests
    SpoiledMeat
    VisitorIncome
    AnnualSubsidy
    TurnAdvanced
  }
}

class AnimalDailyOutcome
class HabitatMonthlyOutcome

ZooSimulationService o-- "0..*" ZooEvent
ZooEvent --> ZooEventType
ZooSimulationService ..> AnimalDailyOutcome
ZooSimulationService ..> HabitatMonthlyOutcome

note bottom
The simulation audit log now records:
- management actions
- business events
- exceptional monthly events
- financial inflows
- turn progression
end note
@enduml
